fixed notofication overflow issue

--- a/ecommerce_app/static/css/styles.css
+++ b/ecommerce_app/static/css/styles.css
@@ -78,3 +78,8 @@ body {
     text-decoration: none; /* Remove underline on hover */
 
 }
+
+.dropdown-menu {
+  max-width: 80vw;
+  overflow-x: auto;
+}
